Year: 2022, Month: 10, Day: 04

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <span class="sec" id="sec"></span>
       </div>
     </div>
+    <footer>
+      Coded by
+      <a href="https://twitter.com/Belal_Mohamed19" target="_blank"
+        >Belal Mohamed</a
+      >
+      &copy; All Rights Recives
+    </footer>
     <script src="./js/app.js"></script>
   </body>
 </html>
